# Homeworks

./: .gitattributes  Checknotebook.py  Homework  Homework.pub  README.md  SQLTasks Tier 2.sql  SpringBoardPractice.ipynb  Unit 4 Challenge - Tier 3.ipynb  country_club[Prakash_Parajuli].ipynb  myUniversalFunctions.ipynb  newfile.ipynb
Unit 14.3.5 Decision_Tree_Specialty_Coffee_Case_Study/: Springboard Decision Tree Specialty Coffee Case Study - Tier 3.ipynb  tree_visualization
Unit 14.5.6 Gradient_Boosting_Case_Study_updated_10_01_2020/: Gradient Boosting Case Study.ipynb
Unit 15.2.2 Euclidean_and_Manhattan_Distances_Case_Study_11102020/: Euclidean_and_Manhattan_Distances_Case_Study.ipynb
Unit 15.6.3 Clustering_Case_Study_updated_10_15_2020/: Clustering Case Study - Customer Segmentation with K-Means - Tier 1.ipynb  WineKMC.xlsx  (+1 more)
Unit 24.1.2 water-pumps/: Makefile  README.md  pyproject.toml  requirements.txt
Unit 24.1.2 water-pumps/docs/: mkdocs.yml
Unit 24.1.2 water-pumps/docs/docs/: index.md
Unit 24.1.2 water-pumps/notebooks/: 1-hr-lecture.ipynb
Unit 24.1.2 water-pumps/notebooks/labs/: 2.0-environment-lab.ipynb  2.0-environment-solution.ipynb  3.0-refactoring-lab.ipynb  3.0-refactoring-solution.ipynb
Unit 24.1.2 water-pumps/notebooks/lectures/: 2.0-environment.ipynb  3.0-refactoring.ipynb  4.0-testing.ipynb
Unit 24.1.2 water-pumps/src/features/: build_features.py  preprocess_solution.py
Unit 24.1.2 water-pumps/unit_24.1.2_water_pumps/: __init__.py  dataset.py  plots.py
Unit 24.1.2 water-pumps/unit_24.1.2_water_pumps/modeling/: predict.py  train.py
(+141 files in other folders)
