[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "unit_24.1.2_water_pumps"
version = "0.0.1"
description = "This is to practice cookiecutter and setting up environment"
authors = [
  { name = "Dr. Prakash Parajuli" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["unit_24.1.2_water_pumps"]
force_sort_within_sections = true
